# softalign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
include/: softalign.hpp
python/: __init__.py  _blossum.py  soft_alignment.py
softalign/: __init__.py  _blossum.py  distance_metrics_with_blosum.py  soft_alignment.py
src/: bindings.cpp  dp_kernel.cpp
tests/: test_core.py
