# [build-system]
# requires = [
#   "scikit-build-core>=0.7",
#   "pybind11>=2.10",
#   "numpy",
#   "cmake>=3.18",
#   "ninja",
#   "scipy"
# ]
# build-backend = "scikit_build_core.build"

# [project]
# name = "softalign"
# version = "0.1.0"
# description = "Fast probabilistic protein soft sequence alignment with AVX and OpenMP"
# authors = [{ name = "Matthew A. Spence", email="matthew.spence@anu.edu.au" }]
# readme = "README.md"
# license = { file = "LICENSE" }
# requires-python = ">=3.9"
# dependencies = [
#   "numpy>=1.23"
# ]

# [project.urls]
# Homepage = "https://github.com/RSCJacksonLab/softalign"
# Issues   = "https://github.com/RSCJacksonLab/softalign/issues"

# [tool.scikit-build]
# packages = ["softalign"]               # wheel must contain this package
# package-dir = {"" = "softalign"}       # it lives in the folder you just renamed
# wheel.expand-macos-universal-tags = true
# wheel.py-api = "cp39"
# build.verbose = true
# sdist.include = ["include/**", "src/**", "python/**", "CMakeLists.txt"]

# [tool.scikit-build.packaging] 
# packages = ["softalign"]
# package-dir = {"" = "softalign"} 

[build-system]
requires = [
  "scikit-build-core>=0.11",          # 0.11+ uses new schema
  "pybind11>=2.10",
  "numpy",
  "scipy"
]
build-backend = "scikit_build_core.build"

[project]
name = "softalign"
version = "0.1.0"
description = "Fast probabilistic protein soft sequence alignment with AVX and OpenMP"
authors = [{ name = "Matthew A. Spence", email = "matthew.spence@anu.edu.au" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://github.com/RSCJacksonLab/softalign"
Issues    = "https://github.com/RSCJacksonLab/softalign/issues"

[tool.scikit-build]
build.verbose = true
wheel.expand-macos-universal-tags = true
sdist.include = [
  "include/**",
  "src/**",
  "softalign/**",
  "CMakeLists.txt"
]

[tool.scikit-build.packaging]
packages    = ["softalign"]
package-dir = { "" = "softalign" }